# sihspark

./: LICENSE  README.md  package.json  pnpm-lock.yaml
chat/: README.md  config.py  main.py  maleria.txt  pyproject.toml  requirements.txt  sTs.py  test.py  todo.md
chatbot/: .dockerignore  .env  API_DOCUMENTATION.md  Dockerfile  README.md  RENDER_DEPLOYMENT.md  app.py  app_old.py  build.sh  docker-compose.yml  render.yaml  requirements.txt
client/: PWA_SETUP.md  next.config.ts  package-pwa.json  pnpm-lock.yaml  test-pwa.sh
client/public/: manifest.json  sitemap.xml  sw.js
client/public/icons/: icon-generator.html  switches.ai
client/scripts/: generate-icons.js
client/src/app/: layout.tsx  page.tsx
client/src/components/: Navbar.tsx  accordian-card.tsx  app-sidebar.tsx  charts.tsx  kpi-row.tsx  (+7 more)
model/outbreak/: README.md  app.py  generate_data.py  gunicorn.conf.py  requirements.txt  train_model.py  wsgi.py
model/water_quality/: .gitignore  app.py  requirements.txt  water_quality.ipynb  water_quality_model_xgb_classifier.pkl
model/waterborne-disease-predictor/: requirements.txt
server/: index.js  package-lock.json  package.json
server/controllers/: alertController.js  healthCardController.js  messageController.js  reportController.js  waterTestController.js
server/lib/: sms.js  whatapp.js
server/prisma/: schema.prisma  seed-simple.js  seed.js
server/routes/: alertRoutes.js  healthCardRoutes.js  messageRoutes.js  reportRoutes.js  waterTestRoutes.js
src/app/: globals.css  layout.tsx
src/components/: AppSidebar.tsx  create-water-test-modal.tsx
(+27 files in other folders)
